@@ -452,7 +452,7 @@ static void status_service(Service_T S, StringBuffer_T B, Level_Type L, int V) {
 static void status_servicegroup(ServiceGroup_T SG, StringBuffer_T B, Level_Type L) {
         StringBuffer_append(B, "<servicegroup name=\"%s\">", SG->name);
         for (ServiceGroupMember_T SGM = SG->members; SGM; SGM = SGM->next)
-                StringBuffer_append(B, "<service>%s</service>", SGM->name);
+                StringBuffer_append(B, "<service>%s</service>", SGM->service->name);
         StringBuffer_append(B, "</servicegroup>");
 }
 
